--- a/composer.json
+++ b/composer.json
@@ -55,5 +55,8 @@
             "type": "composer",
             "url": "https://packages.drupal.org/8"
         }
+    },
+    "require-dev": {
+        "drupal/core-dev": "*"
     }
 }
