--- a/configsync/core.entity_view_display.node.report.default.yml
+++ b/configsync/core.entity_view_display.node.report.default.yml
@@ -17,6 +17,7 @@ dependencies:
     - node.type.report
   module:
     - datetime
+    - options
     - user
 id: node.report.default
 targetEntityType: node
@@ -86,23 +87,19 @@ content:
     type: entity_reference_label
     region: content
   field_service_request_id:
-    weight: 101
+    weight: 113
     label: above
     settings:
-      thousand_separator: ''
-      prefix_suffix: true
+      link_to_entity: false
     third_party_settings: {  }
-    type: number_integer
+    type: string
     region: content
   field_status:
-    weight: 102
+    weight: 114
     label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
+    settings: {  }
     third_party_settings: {  }
-    type: boolean
+    type: list_default
     region: content
   field_status_notes:
     weight: 103
