--- a/configsync/core.extension.yml
+++ b/configsync/core.extension.yml
@@ -1,7 +1,9 @@
 module:
   automated_cron: 0
   block: 0
+  bos311: 0
   breakpoint: 0
+  config: 0
   datetime: 0
   dblog: 0
   dynamic_page_cache: 0
