--- a/configsync/field.field.node.report.field_status.yml
+++ b/configsync/field.field.node.report.field_status.yml
@@ -1,23 +1,21 @@
-uuid: 4cb7c007-a8ee-4e49-9e28-277d6f0c5e46
+uuid: 3efce814-fdcf-4edc-ad20-f6a61df8ff9f
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_status
     - node.type.report
+  module:
+    - options
 id: node.report.field_status
 field_name: field_status
 entity_type: node
 bundle: report
 label: Status
 description: ''
-required: false
+required: true
 translatable: false
-default_value:
-  -
-    value: 0
+default_value: {  }
 default_value_callback: ''
-settings:
-  on_label: Closed
-  off_label: Open
-field_type: boolean
+settings: {  }
+field_type: list_string
