--- a/configsync/field.storage.node.field_service_request_id.yml
+++ b/configsync/field.storage.node.field_service_request_id.yml
@@ -1,4 +1,4 @@
-uuid: f05ca7b6-7064-409d-a601-6a21556ce200
+uuid: 2ca94805-a553-470e-80cc-796fe8f29c63
 langcode: en
 status: true
 dependencies:
@@ -7,10 +7,11 @@ dependencies:
 id: node.field_service_request_id
 field_name: field_service_request_id
 entity_type: node
-type: integer
+type: string
 settings:
-  unsigned: false
-  size: normal
+  max_length: 255
+  is_ascii: false
+  case_sensitive: false
 module: core
 locked: false
 cardinality: 1
