--- a/configsync/field.storage.node.field_status.yml
+++ b/configsync/field.storage.node.field_status.yml
@@ -1,15 +1,24 @@
-uuid: 5f8afc19-59fe-4948-b6e2-62262d2e00a4
+uuid: 9a5ada02-0ecd-4812-94f1-9e7c26dccb44
 langcode: en
 status: true
 dependencies:
   module:
     - node
+    - options
 id: node.field_status
 field_name: field_status
 entity_type: node
-type: boolean
-settings: {  }
-module: core
+type: list_string
+settings:
+  allowed_values:
+    -
+      value: open
+      label: Open
+    -
+      value: closed
+      label: Closed
+  allowed_values_function: ''
+module: options
 locked: false
 cardinality: 1
 translatable: true
