--- a/configsync/core.entity_view_display.node.report.teaser.yml
+++ b/configsync/core.entity_view_display.node.report.teaser.yml
@@ -7,7 +7,7 @@ dependencies:
     - field.field.node.report.field_address
     - field.field.node.report.field_description
     - field.field.node.report.field_latitude
-    - field.field.node.report.field_longitide
+    - field.field.node.report.field_longitude
     - field.field.node.report.field_media_url
     - field.field.node.report.field_requested_datetime
     - field.field.node.report.field_service_name
@@ -32,7 +32,7 @@ hidden:
   field_address: true
   field_description: true
   field_latitude: true
-  field_longitide: true
+  field_longitude: true
   field_media_url: true
   field_requested_datetime: true
   field_service_name: true
