--- a/configsync/core.extension.yml
+++ b/configsync/core.extension.yml
@@ -14,7 +14,10 @@ module:
   filter: 0
   image: 0
   jsonapi: 0
+  link: 0
   media: 0
+  menu_link_content: 0
+  menu_ui: 0
   node: 0
   options: 0
   page_cache: 0
