--- a/configsync/core.extension.yml
+++ b/configsync/core.extension.yml
@@ -35,6 +35,7 @@ module:
 theme:
   stark: 0
   claro: 0
+  bos311: 0
 profile: minimal
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
