Hide nid from view

--- a/configsync/views.view.reports.yml
+++ b/configsync/views.view.reports.yml
@@ -118,7 +118,7 @@ display:
           group_type: group
           admin_label: ''
           label: ID
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
