--- a/configsync/system.site.yml
+++ b/configsync/system.site.yml
@@ -1,6 +1,6 @@
 uuid: 77536548-9dd3-4752-b7c3-aef93731de18
-name: 'Drush Site-Install'
-mail: admin@example.com
+name: 'Boston 311 Reports'
+mail: balsam.adam@gmail.com
 slogan: ''
 page:
   403: ''
