--- a/configsync/views.view.reports.yml
+++ b/configsync/views.view.reports.yml
@@ -6,7 +6,6 @@ dependencies:
     - field.storage.node.field_address
     - field.storage.node.field_media_url
     - field.storage.node.field_service_name
-    - field.storage.node.field_status
     - node.type.report
     - system.menu.main
     - taxonomy.vocabulary.service
@@ -14,7 +13,6 @@ dependencies:
     - 'taxonomy_term:service:8fbbecbb-2dee-444d-8cfe-0483139282aa'
   module:
     - node
-    - options
     - taxonomy
     - user
 _core:
@@ -68,13 +66,16 @@ display:
           summary: ''
           description: ''
           columns:
-            node_bulk_form: node_bulk_form
+            nid: nid
             title: title
             changed: changed
             field_service_name: field_service_name
-            field_status: field_status
+            field_address: field_address
+            field_media_url: field_media_url
           info:
-            node_bulk_form:
+            nid:
+              sortable: false
+              default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
@@ -94,15 +95,22 @@ display:
               empty_column: false
               responsive: priority-low
             field_service_name:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-            field_status:
-              sortable: true
+            field_address:
+              sortable: false
               default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_media_url:
+              sortable: true
+              default_sort_order: desc
               align: ''
               separator: ''
               empty_column: false
@@ -227,7 +235,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Service Name'
+          label: Category
           exclude: false
           alter:
             alter_text: false
@@ -271,70 +279,8 @@ display:
           click_sort_column: target_id
           type: entity_reference_label
           settings:
-            link: true
+            link: false
           group_column: target_id
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-        field_status:
-          id: field_status
-          table: node__field_status
-          field: field_status
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: Status
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: list_default
-          settings: {  }
-          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -598,47 +544,6 @@ display:
           hierarchy: false
           error_message: true
           plugin_id: taxonomy_index_tid
-        field_status_value:
-          id: field_status_value
-          table: node__field_status
-          field: field_status_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: or
-          value: {  }
-          group: 1
-          exposed: true
-          expose:
-            operator_id: field_status_value_op
-            label: Status
-            description: ''
-            use_operator: false
-            operator: field_status_value_op
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: field_status_value
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          plugin_id: list_field
         tid_1:
           id: tid_1
           table: taxonomy_index
@@ -759,7 +664,7 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: 'Displaying @start - @end of @total reports found'
+          content: "Displaying @start - @end of @total reports found\r\nClick on a report for more information about it."
           plugin_id: result
     display_plugin: default
     display_title: Master
@@ -779,7 +684,6 @@ display:
         - 'config:field.storage.node.field_address'
         - 'config:field.storage.node.field_media_url'
         - 'config:field.storage.node.field_service_name'
-        - 'config:field.storage.node.field_status'
   page:
     display_options:
       path: reports
@@ -818,4 +722,3 @@ display:
         - 'config:field.storage.node.field_address'
         - 'config:field.storage.node.field_media_url'
         - 'config:field.storage.node.field_service_name'
-        - 'config:field.storage.node.field_status'
