--- a/configsync/views.view.reports.yml
+++ b/configsync/views.view.reports.yml
@@ -632,6 +632,46 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+        field_zip_code_value:
+          id: field_zip_code_value
+          table: node__field_zip_code
+          field: field_zip_code_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_zip_code_value_op
+            label: 'Zip Code'
+            description: ''
+            use_operator: false
+            operator: field_zip_code_value_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: field_zip_code_value
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: string
       sorts: {  }
       title: 'Boston 311 Reports'
       empty:
