--- a/configsync/views.view.reports.yml
+++ b/configsync/views.view.reports.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_address
+    - field.storage.node.field_description
     - field.storage.node.field_media_url
     - field.storage.node.field_requested_datetime
     - field.storage.node.field_service_name
@@ -122,6 +123,59 @@ display:
       row:
         type: fields
       fields:
+        view_node:
+          id: view_node
+          table: node
+          field: view_node
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          text: details
+          output_url_as_text: true
+          absolute: false
+          entity_type: node
+          plugin_id: entity_link
         nid:
           id: nid
           table: node_field_data
@@ -188,25 +242,67 @@ display:
           entity_type: node
           entity_field: nid
           plugin_id: field
-        title:
-          id: title
-          table: node_field_data
-          field: title
-          label: Title
+        field_description:
+          id: field_description
+          table: node__field_description
+          field: field_description
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Description
           exclude: false
           alter:
             alter_text: false
+            text: ''
+            make_link: true
+            path: '{{ view_node }}'
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 255
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: true
+            preserve_tags: ''
+            html: false
+          element_type: ''
           element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
           element_default_classes: true
           empty: ''
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          entity_type: node
-          entity_field: title
-          type: string
-          settings:
-            link_to_entity: true
+          click_sort_column: value
+          type: basic_string
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
           plugin_id: field
         field_requested_datetime:
           id: field_requested_datetime
@@ -409,9 +505,9 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="/node/{{ nid }}"><img src="{{ field_media_url__value }}" height="50px" width="50px" /></a>'
-            make_link: false
-            path: ''
+            text: '<img src="{{ field_media_url__value }}" height="50px" width="50px" />'
+            make_link: true
+            path: '{{ view_node }}'
             absolute: false
             external: false
             replace_spaces: false
@@ -747,8 +843,8 @@ display:
               authenticated: authenticated
               anonymous: '0'
             placeholder: ''
-            min_placeholder: 'YYYY-MM-DD HH:MM:SS'
-            max_placeholder: 'YYYY-MM-DD HH:MM:SS'
+            min_placeholder: 'start date'
+            max_placeholder: 'end date'
           is_grouped: false
           group_info:
             label: ''
@@ -812,6 +908,7 @@ display:
       max-age: -1
       tags:
         - 'config:field.storage.node.field_address'
+        - 'config:field.storage.node.field_description'
         - 'config:field.storage.node.field_media_url'
         - 'config:field.storage.node.field_requested_datetime'
         - 'config:field.storage.node.field_service_name'
@@ -851,6 +948,7 @@ display:
       max-age: -1
       tags:
         - 'config:field.storage.node.field_address'
+        - 'config:field.storage.node.field_description'
         - 'config:field.storage.node.field_media_url'
         - 'config:field.storage.node.field_requested_datetime'
         - 'config:field.storage.node.field_service_name'
