--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "drupal/core-composer-scaffold": "^9",
         "drush/drush": "^10",
         "composer/installers": "^1.2",
-        "ext-json": "*"
+        "ext-json": "*",
+        "cweagans/composer-patches": "^1.6.7"
     },
     "license": "GPL-2.0-or-later",
     "authors": [
@@ -49,7 +50,13 @@
             "docroot/themes/contrib/{$name}": [
                 "type:drupal-theme"
             ]
-        }
+        },
+        "patches": {
+            "drupal/core": {
+                "2230909 - Simple decimals fail to pass validation": "https://www.drupal.org/files/issues/2020-05-07/drupal_2230909_151.patch"
+            }
+        },
+        "enable-patching": true
     },
     "repositories": {
         "drupal": {
