--- a/configsync/views.view.reports.yml
+++ b/configsync/views.view.reports.yml
@@ -853,8 +853,8 @@ display:
               authenticated: authenticated
               anonymous: '0'
             placeholder: ''
-            min_placeholder: 'start date'
-            max_placeholder: 'end date'
+            min_placeholder: 'YYYY-MM-DD HH:M:SS'
+            max_placeholder: 'YYYY-MM-DD HH:M:SS'
           is_grouped: false
           group_info:
             label: ''
@@ -868,6 +868,46 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: datetime
+        field_service_request_id_value:
+          id: field_service_request_id_value
+          table: node__field_service_request_id
+          field: field_service_request_id_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: contains
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_service_request_id_value_op
+            label: 'Request ID'
+            description: 'Use to search for a specific report'
+            use_operator: false
+            operator: field_service_request_id_value_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: field_service_request_id_value
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+            placeholder: 'All or part of a known request ID'
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: string
       sorts: {  }
       title: 'Boston 311 Reports'
       empty:
@@ -899,8 +939,8 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          empty: false
-          content: "<p>Displaying <strong>@start</strong> - <strong>@end</strong> of <strong>@total</strong> reports found</p>\r\n<p>Click on a report title for more information about it.<p>\r\n<p>Use the form below to search for reports. All fields are optional. Leave blank for all results. Filters that return a large number of results may take several seconds to complete.</p>"
+          empty: true
+          content: "<p>Displaying <strong>@start</strong> - <strong>@end</strong> of <strong>@total</strong> reports found</p>\r\n<p>Use the form below to search for reports. All fields are optional. Leave blank for all results. Filters that return a large number of results may take several seconds to complete.</p>"
           plugin_id: result
     display_plugin: default
     display_title: Master
@@ -942,8 +982,9 @@ display:
         weight: -10
       display_extenders: {  }
       exposed_block: false
+      display_description: ''
     display_plugin: page
-    display_title: Page
+    display_title: 'Search Page'
     id: page
     position: 1
     cache_metadata:
@@ -956,6 +997,115 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       max-age: -1
+      tags:
+        - 'config:field.storage.node.field_address'
+        - 'config:field.storage.node.field_description'
+        - 'config:field.storage.node.field_media_url'
+        - 'config:field.storage.node.field_requested_datetime'
+        - 'config:field.storage.node.field_service_name'
+  page_1:
+    display_plugin: page
+    id: page_1
+    display_title: 'Recent Page'
+    position: 2
+    display_options:
+      display_extenders: {  }
+      display_description: ''
+      filters:
+        field_requested_datetime_value:
+          id: field_requested_datetime_value
+          table: node__field_requested_datetime
+          field: field_requested_datetime_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '>'
+          value:
+            min: ''
+            max: ''
+            value: '-1 month'
+            type: offset
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_requested_datetime_value_op
+            label: 'Requested Datetime (field_requested_datetime)'
+            description: ''
+            use_operator: false
+            operator: field_requested_datetime_value_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: field_requested_datetime_value
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+      defaults:
+        filters: false
+        filter_groups: false
+        exposed_form: false
+        header: false
+      filter_groups:
+        operator: AND
+        groups: {  }
+      path: reports/recent
+      exposed_form:
+        type: basic
+        options:
+          submit_button: Find
+          reset_button: true
+          reset_button_label: Reset
+          exposed_sorts_label: 'Sort by'
+          expose_sort_order: true
+          sort_asc_label: Asc
+          sort_desc_label: Desc
+      menu:
+        type: normal
+        title: 'Recent 311 reports'
+        description: 'Recent Boston 311 reports'
+        expanded: false
+        parent: ''
+        weight: 0
+        context: '0'
+        menu_name: main
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: "<p>Displaying <strong>@start</strong> - <strong>@end</strong> of <strong>@total</strong></p>\r\n<p>You can also use the <a href=\"/reports\">Advanced Search</a>."
+          plugin_id: result
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+        - url.query_args
+        - 'user.node_grants:view'
+        - user.permissions
       tags:
         - 'config:field.storage.node.field_address'
         - 'config:field.storage.node.field_description'
